--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <script src="js/canvas.js" defer></script>
     <!-- Canvas for background effect -->
     <canvas id="spaceCanvas" width="100%" height="100%"></canvas>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8MJJR3C1F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X8MJJR3C1F');
+</script>
     
 </head>
 <body>
